--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Om Patil</title> 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
     <link rel="stylesheet" type="text/css" href="index.css">
+    <meta name="google-site-verification" content="_7OlCXi6MNMBHp17W4l58eEP-7z_Y_8Ug2IiGpNEFx8" />
   </head> 
   <body> 
     <script type="text/javascript" src="index.js"> 
