Added my favicon

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html> 
   <head> 
     <title>Om Patil</title> 
+    <link rel="icon" type="image/x-icon" href="https://media.licdn.com/dms/image/D4E03AQFVn3KAHRIpvA/profile-displayphoto-shrink_200_200/0/1699783442211?e=1708560000&v=beta&t=YLGAcN9OoH_RNel3VprWzT0iHz0yidN8i4tKRwsLFbw">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
     <link rel="stylesheet" type="text/css" href="index.css">
     <meta name="google-site-verification" content="_7OlCXi6MNMBHp17W4l58eEP-7z_Y_8Ug2IiGpNEFx8" />
